Nguyen-Anh-Dung

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                         <li>November <span class="quantity">3</span></li>
                     </ul>
 
-                    <div class="places-list">
-                        <div class="place-item">
+                    <div class="row places-list">
+                        <div class="col place-item">
                             <img src="./assets/img/mua/4.jpg" alt="Mua Kem 1" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">Pé Kem</h3>
@@ -117,7 +117,7 @@
                                 <button class="place-buy-btn js-buy-ticket">By Tickets</button>
                             </div>
                         </div>
-                        <div class="place-item">
+                        <div class="col place-item">
                             <img src="./assets/img/mua/5.jpg" alt="Mua Kem 1" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">Vân Anh</h3>
@@ -126,7 +126,7 @@
                                 <button class="place-buy-btn js-buy-ticket">By Tickets</button>
                             </div>
                         </div>
-                        <div class="place-item">
+                        <div class="col place-item">
                             <img src="./assets/img/mua/6.jpg" alt="Mua Kem 1" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">Vân Anh Xinh Đẹp</h3>
