--- a/grid-system/layout1.html
+++ b/grid-system/layout1.html
@@ -12,31 +12,74 @@
     <link rel="stylesheet" href="./css-layout1.css">
 
     <style>
-        body {
-            margin: 0;
-        }
-
-        h1 {
-            padding: 100px 0;
-            font-size: 40px;
-            margin: 0;
-        }
-
+              * {
+        box-sizing: border-box; /* lÀM Kích thước không bị thay đổi khi làm dầy padding và border */
+      }
         .container {
             background-color: orange;
             text-align: center;
             color: #fff;
 
-
         }
+
+        .col {
+        text-align: center;
+        background-color: #ccc;
+        background-clip: content-box;
+        margin-top: 8px;
+        margin-bottom: 8px;
+      }
     </style>
 
 
 </head>
 
+
+        <!-- 
+            -c- Mobile
+            -m- Tablet
+            -l- PC
+         -->
+
 <body>
     <div class="grid wide container">
-        <h1>Grid System</h1>
+
+        <div class="row">
+            <div class="col l-3 m-6 c-12">
+              <h2>l-3 m-6 c-6</h2>
+            </div>
+            <div class="col l-3 m-6 c-12">
+              <h2>l-3 m-6 c-6</h2>
+            </div>
+            <div class="col l-3 m-6 c-12">
+              <h2>l-3 m-6 c-6</h2>
+            </div>
+            <div class="col l-3 m-6 c-12">
+              <h2>l-3 m-6 c-6</h2>
+            </div>
+          </div>
+
+
+          <div class="row">
+            <div class="col l-4 m-4 c-12">
+              <h2>l-3 m-6 c-6</h2>
+            </div>
+            <div class="col l-8 m-8 c-12">
+              <h2>l-3 m-6 c-6</h2>
+            </div>
+          </div>
+
+
+
+          <div class="row">
+            <div class="col l-9 m-9 c-12">
+              <h2>l-3 m-6 c-6</h2>
+            </div>
+            <div class="col l-3 m-3 c-12">
+              <h2>l-3 m-6 c-6</h2>
+            </div>
+          </div>
+
     </div>
 
     <!-- Optional JavaScript -->
