--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
                 <div class="row contact-content">
                     <div class="col col-half s-col-full contact-info">
                         <p><i class="ti-location-pin"></i>Chicago, US</p>
-                        <p><i class="ti-mobile"></i>Phone: 0000</p>
-                        <p><i class="ti-email"></i>Email: mail@mail.com</p>
+                        <p><i class="ti-mobile"></i>Phone: <a href="tel:0392879506">0392879506</a> </p>
+                        <p><i class="ti-email"></i>Email: <a href="mailto:dung.nguyenanh@ggg.com.vn">mail@mail.com</a> </p>
                     </div>
                     <div class="col col-half s-col-full contact-form">
                         <form action="">
